[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlgoptimiser"
version = "0.1.1"
description = "Machine Learning Guided Optimization for Materials Science"
authors = [{name = "Zhe Xu", email = "zhe.xu@ucl.ac.uk"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "line_profiler>=3.0.0",
    "matplotlib>=3.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/username/mlgoptimiser"
Repository = "https://github.com/username/mlgoptimiser.git"

[project.scripts]
mlgoptimiser = "mlgoptimiser.main:main"

[tool.setuptools.packages.find]
where = ["src"]

